# gemma4-ft

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  REFACTOR.md  _generate_notebook.py  _verify_imports.py  _verify_notebook.py  color_contrast_results.json  docker-compose.yml  gemma4-ft.code-workspace  main.py  pyproject.toml
color_contrast_tools/: COLOR_STYLE_GUIDE.md  README.md  __init__.py  color_contrast_analyzer.py  color_contrast_analyzer_v2.py  color_contrast_final.py  color_contrast_improved_v2.py  color_contrast_validation.py  color_utils.py
distributed_training/: DISTRIBUTED_CONFIG_README.md  __init__.py  adapter_utils.py  check_flash_attention_env.py  compare_training_runs.py  dataset.py  distributed_config.py  distributed_inference.py  gpu_monitor.py  load_balancer.py  run_distributed.sh  train_distributed.py
docker/: Dockerfile  entrypoint.sh  run_infer.sh  run_train.sh
docs/: BUG_AND_DESIGN_ISSUES.md  OPTIMIZATION_REPORT.md  docker-safe-runtime-image-guide.md  docker-training-guide.md  labelme_to_unsloth_requirements.md  project-structure-guide.md  project-structure-review.md
gemma4_core/: __init__.py  bootstrap.py  labelme_export.py  runtime.py
gemma4_ft/: __init__.py
gemma4_multimodal_demo/: COMPARISON_SYSTEM_SUMMARY.md  MODEL_COMPARISON_GUIDE.md  README.md  __init__.py  comparison_config.json  dataset.py  distributed_config.py  fsdp_config.json  gpu_monitor.py  requirements.txt  run_distributed.sh  train_distributed.py  unsloth_train_data.jsonl
labelme_tools/: README.md  __init__.py  file_utils.py  labelme_cleaner.py  labelme_converter.py  labelme_sampler.py  labelme_statistics.py  labelme_stats_processor.py  progress_logger.py  (+1 more)
(+118 files in other folders)
