[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unsloth-finetune"
version = "0.1.0"
description = "Gemma 4 多模态微调项目：分布式训练工具包与数据处理流水线"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "datasets>=2.14.0",
    "accelerate>=0.20.0",
    "peft>=0.4.0",
    "trl>=0.7.0",
    "pillow>=9.0.0",
    "requests>=2.28.0",
    "orjson>=3.9.0",
    "tqdm>=4.60.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
finetune = [
    "unsloth",
    "bitsandbytes>=0.41.0",
    "sentencepiece",
    "protobuf",
    "safetensors",
    "xformers>=0.0.20",
    "hf_transfer",
    "huggingface_hub>=0.16.0",
]
data = [
    "pandas>=1.5.0",
    "scipy>=1.10.0",
    "numpy>=1.21.0",
    "matplotlib>=3.5.0",
]
monitor = [
    "pynvml>=11.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
unsloth-train = "unsloth_finetune.training.distributed.train_distributed:main"
unsloth-infer = "unsloth_finetune.training.distributed.distributed_inference:main"
unsloth-check-flash-attention = "unsloth_finetune.training.distributed.check_flash_attention_env:main"
unsloth-compare-runs = "unsloth_finetune.training.distributed.compare_training_runs:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

